force-app/main/default/objects/KPI_Metric__c/KPI_Metric__c.object-meta.xml
<CustomObject>
    <description>Defines reusable KPI metrics for the Dynamic KPI Dashboard. Each record declares how to aggregate data from a source object (SUM, COUNT, AVG) for a specific field, with optional default filters and display formatting. Admins can create new metrics without code changes.</description>
    <label>KPI Metric</label>
    <nameField>
        <label>KPI Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>