force-app/main/default/objects/KPI_Metric__c/fields/Aggregate_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Field__c</fullName>
    <description>Field to aggregate for SUM/AVG/MIN/MAX (e.g., Total_Net_Amount__c). Leave blank when Aggregation is COUNT.</description>
    <label>Aggregate Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>