force-app/main/default/objects/KPI_Metric__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Hex color code for the KPI card accent (e.g., #0176d3).</description>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>