force-app/main/default/objects/KPI_Metric__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <description>Field used for date range filtering on this metric (e.g., Order_Date__c on Sales_Order__c, Visit_Date__c on Visit__c).</description>
    <label>Date Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>