force-app/main/default/objects/KPI_Metric__c/fields/Default_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Filter__c</fullName>
    <description>SOQL WHERE-clause snippet always applied to this metric (e.g., Status__c IN (''Approved'',''Delivered'')). Do NOT include the WHERE keyword.</description>
    <label>Default Filter</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>