force-app/main/default/objects/KPI_Metric__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <description>Custom filter logic expression (e.g. 1 AND (2 OR 3)). If blank, all filters are joined with AND.</description>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>