force-app/main/default/objects/KPI_Metric__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>SLDS icon name to display on the KPI card (e.g., utility:money, utility:people, standard:orders).</description>
    <label>Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>