force-app/main/default/objects/KPI_Metric__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Display label shown on dashboards (e.g., Total Revenue, Productive Visits).</description>
    <label>Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>