force-app/main/default/objects/KPI_Metric__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API name of the object to query (e.g., Sales_Order__c, Visit__c, Collection__c).</description>
    <label>Source Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>