force-app/main/default/objects/KPI_Metric__c/fields/User_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Field__c</fullName>
    <description>Field that holds the owner/salesperson User Id on the source object (e.g., Salesperson__c). Used for self/team/org scoping.</description>
    <label>User Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>